# lazy-anki-german

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
lazy_anki_german/: __init__.py  anki_import.py  db.py  frequency.py  freshness.py  player.py  scheduler.py  tts.py  voice_setup.py
