[project]
name = "lazy-anki-german"
version = "0.1.0"
description = "Hands-free German vocabulary trainer — speaks words, meanings and example sentences pulled from your Anki collection"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lazy_anki_german"]
